--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,8 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-    <h1>hi, world!</h1>
-    <img src="img/face.jpg">
-    <div id="container" class="blue-border"/>
-    <script type="text/javascript" src="main.js"></script>
+    <div id="root"></div>
+    <script src="reagent/react.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
