snapshot for debugging

--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>hi, world!</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <div id="root"></div>
