--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-    <h1>hi, world!</h1>
-    <img src="img/face.jpg">
-    <div id="container" class="blue-border"/>
+    <img src="img/face.jpg" width="100" height="100">
+    <div id="container" class="blue-border"><p>hi, world!</p></div>
+    <script src="http://fb.me/react-0.12.2.js"></script>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
